OAK-10167: Elastic bulk processor should fail when intermediate bulks fail (#881)
* OAK-10167: bulk processor fails when at least an intermediate bulk fails

* OAK-10167: consolidate usage of java 9/10 immutable data structures

* Update oak-search-elastic/src/main/java/org/apache/jackrabbit/oak/plugins/index/elastic/ElasticIndexDefinition.java

Co-authored-by: Nuno Santos <nsantos@adobe.com>

* OAK-10167: improved exception handling in bulk processor

---------

Co-authored-by: Nuno Santos <nsantos@adobe.com>