@@ -16,16 +16,15 @@
  */
 package org.apache.jackrabbit.oak.plugins.index.elastic;
 
-import com.google.common.collect.ImmutableList;
 import org.apache.jackrabbit.oak.api.CommitFailedException;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.plugins.index.elastic.util.ElasticIndexDefinitionBuilder;
 import org.apache.jackrabbit.oak.plugins.index.search.util.IndexDefinitionBuilder;
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.io.IOException;
+import java.util.List;
 
-import static java.util.Collections.singletonList;
 import static org.apache.jackrabbit.oak.plugins.index.search.FulltextIndexConstants.PROPDEF_PROP_NODE_NAME;
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -48,8 +47,7 @@ public class ElasticPropertyIndexTest extends ElasticAbstractQueryTest {
         String propaQuery = "select [jcr:path] from [nt:base] where [propa] = 'foo248'";
         assertEventually(() -> {
             assertThat(explain(propaQuery), containsString("elasticsearch:test1"));
-
-            assertQuery(propaQuery, singletonList("/test/a248"));
+            assertQuery(propaQuery, List.of("/test/a248"));
         });
 
         // Now we test for 250 < nodes < 500
@@ -61,8 +59,7 @@ public class ElasticPropertyIndexTest extends ElasticAbstractQueryTest {
         String propaQuery2 = "select [jcr:path] from [nt:base] where [propa] = 'foo299'";
         assertEventually(() -> {
             assertThat(explain(propaQuery2), containsString("elasticsearch:test1"));
-
-            assertQuery(propaQuery2, singletonList("/test/a299"));
+            assertQuery(propaQuery2, List.of("/test/a299"));
         });
     }
 
@@ -85,9 +82,9 @@ public class ElasticPropertyIndexTest extends ElasticAbstractQueryTest {
             assertThat(explain(propaQuery), containsString("elasticsearch:test1"));
             assertThat(explain("select [jcr:path] from [nt:base] where [propc] = 'foo'"), containsString("elasticsearch:test2"));
 
-            assertQuery(propaQuery, Arrays.asList("/test/a", "/test/b"));
-            assertQuery("select [jcr:path] from [nt:base] where [propa] = 'foo2'", singletonList("/test/c"));
-            assertQuery("select [jcr:path] from [nt:base] where [propc] = 'foo'", singletonList("/test/d"));
+            assertQuery(propaQuery, List.of("/test/a", "/test/b"));
+            assertQuery("select [jcr:path] from [nt:base] where [propa] = 'foo2'", List.of("/test/c"));
+            assertQuery("select [jcr:path] from [nt:base] where [propc] = 'foo'", List.of("/test/d"));
         });
     }
 
@@ -117,15 +114,15 @@ public class ElasticPropertyIndexTest extends ElasticAbstractQueryTest {
             String explanation = explain(propabQuery);
             assertThat(explanation, containsString("elasticsearch:test1(/oak:index/test1) "));
             assertThat(explanation, containsString("{\"term\":{\":nodeName\":{\"value\":\"foo\""));
-            assertQuery(propabQuery, singletonList("/test/foo"));
+            assertQuery(propabQuery, List.of("/test/foo"));
 
-            assertQuery(queryPrefix + "LOCALNAME() = 'bar'", singletonList("/test/sc/bar"));
-            assertQuery(queryPrefix + "LOCALNAME() LIKE 'foo'", singletonList("/test/foo"));
-            assertQuery(queryPrefix + "LOCALNAME() LIKE 'camel%'", singletonList("/test/camelCase"));
+            assertQuery(queryPrefix + "LOCALNAME() = 'bar'", List.of("/test/sc/bar"));
+            assertQuery(queryPrefix + "LOCALNAME() LIKE 'foo'", List.of("/test/foo"));
+            assertQuery(queryPrefix + "LOCALNAME() LIKE 'camel%'", List.of("/test/camelCase"));
 
-            assertQuery(queryPrefix + "NAME() = 'bar'", singletonList("/test/sc/bar"));
-            assertQuery(queryPrefix + "NAME() LIKE 'foo'", singletonList("/test/foo"));
-            assertQuery(queryPrefix + "NAME() LIKE 'camel%'", singletonList("/test/camelCase"));
+            assertQuery(queryPrefix + "NAME() = 'bar'", List.of("/test/sc/bar"));
+            assertQuery(queryPrefix + "NAME() LIKE 'foo'", List.of("/test/foo"));
+            assertQuery(queryPrefix + "NAME() LIKE 'camel%'", List.of("/test/camelCase"));
         });
     }
 
@@ -143,7 +140,6 @@ public class ElasticPropertyIndexTest extends ElasticAbstractQueryTest {
                 containsString("elasticsearch:test1")));
     }
 
-
     @Test
     public void inOperandStringValues() throws Exception {
         String query = "select [jcr:path] from [nt:base] where [propa] in(\"a\", \"e\", \"i\")";
@@ -156,7 +152,7 @@ public class ElasticPropertyIndexTest extends ElasticAbstractQueryTest {
         root.commit();
         assertEventually(() -> {
             assertThat(explain(query), containsString("{\"terms\":{\"propa\":[\"a\",\"e\",\"i\"]}}"));
-            assertQuery(query, SQL2, ImmutableList.of("/test/node-a", "/test/node-e", "/test/node-i"));
+            assertQuery(query, SQL2, List.of("/test/node-a", "/test/node-e", "/test/node-i"));
         });
     }
 
@@ -173,7 +169,7 @@ public class ElasticPropertyIndexTest extends ElasticAbstractQueryTest {
 
         assertEventually(() -> {
             assertThat(explain(query), containsString("{\"terms\":{\"propa\":[2,3,5,7]}}"));
-            assertQuery(query, SQL2, ImmutableList.of("/test/node-2", "/test/node-3", "/test/node-5", "/test/node-7"));
+            assertQuery(query, SQL2, List.of("/test/node-2", "/test/node-3", "/test/node-5", "/test/node-7"));
         });
     }
 
@@ -191,8 +187,97 @@ public class ElasticPropertyIndexTest extends ElasticAbstractQueryTest {
 
         assertEventually(() -> {
             assertThat(explain(query), containsString("{\"terms\":{\"propa\":[2.0,3.0,5.0,7.0]}}"));
-            assertQuery(query, SQL2, ImmutableList.of("/test/node-2", "/test/node-3", "/test/node-5", "/test/node-7"));
+            assertQuery(query, SQL2, List.of("/test/node-2", "/test/node-3", "/test/node-5", "/test/node-7"));
         });
+    }
+
+    @Test
+    public void indexFailuresWithFailOnErrorOn() throws Exception {
+        IndexDefinitionBuilder builder = createIndex("a");
+        builder.includedPaths("/test")
+                .indexRule("nt:base")
+                .property("nodeName", PROPDEF_PROP_NODE_NAME);
+
+        // configuring the index with a regex property and strict mapping to simulate failures
+        builder.indexRule("nt:base").property("b", true).propertyIndex();
+        builder.getBuilderTree().setProperty(ElasticIndexDefinition.DYNAMIC_MAPPING, "strict");
+
+        setIndex("test1", builder);
+        root.commit();
+
+        Tree test = root.getTree("/").addChild("test");
+        for (int i = 1; i < 3; i++) {
+            test.addChild("a" + i).setProperty("a", "foo");
+        }
+        root.commit();
+
+        // now we add 5 correct docs and 5 docs cannot be mapped
+        test.addChild("a100").setProperty("a", "foo");
+        test.addChild("a200").setProperty("b", "foo");
+        test.addChild("a101").setProperty("a", "foo");
+        test.addChild("a201").setProperty("b", "foo");
+        test.addChild("a102").setProperty("a", "foo");
+        test.addChild("a202").setProperty("b", "foo");
+        test.addChild("a103").setProperty("a", "foo");
+        test.addChild("a203").setProperty("b", "foo");
+        test.addChild("a104").setProperty("a", "foo");
+        test.addChild("a204").setProperty("b", "foo");
+
+        CommitFailedException cfe = null;
+        try {
+            root.commit();
+        } catch (CommitFailedException e) {
+            cfe = e;
+        }
+
+        assertThat("no exception thrown", cfe != null);
+        assertThat("the exception cause has to be an IOException", cfe.getCause() instanceof IOException);
+        assertThat("there should be 5 suppressed exception", cfe.getCause().getSuppressed().length == 5);
+
+        String query = "select [jcr:path] from [nt:base] where [a] = 'foo'";
+        assertEventually(() -> assertQuery(query, SQL2,
+                List.of("/test/a1", "/test/a2", "/test/a100", "/test/a101", "/test/a102", "/test/a103", "/test/a104")
+        ));
+    }
+
+    @Test
+    public void indexFailuresWithFailOnErrorOff() throws Exception {
+        IndexDefinitionBuilder builder = createIndex("a");
+        builder.includedPaths("/test")
+                .indexRule("nt:base")
+                .property("nodeName", PROPDEF_PROP_NODE_NAME);
+
+        // configuring the index with a regex property and strict mapping to simulate failures
+        builder.indexRule("nt:base").property("b", true).propertyIndex();
+        builder.getBuilderTree().setProperty(ElasticIndexDefinition.DYNAMIC_MAPPING, "strict");
+        builder.getBuilderTree().setProperty(ElasticIndexDefinition.FAIL_ON_ERROR, false);
+
+        setIndex("test1", builder);
+        root.commit();
+
+        Tree test = root.getTree("/").addChild("test");
+        for (int i = 1; i < 3; i++) {
+            test.addChild("a" + i).setProperty("a", "foo");
+        }
+        root.commit();
+
+        // now we add 5 correct docs and 5 docs cannot be mapped
+        test.addChild("a100").setProperty("a", "foo");
+        test.addChild("a200").setProperty("b", "foo");
+        test.addChild("a101").setProperty("a", "foo");
+        test.addChild("a201").setProperty("b", "foo");
+        test.addChild("a102").setProperty("a", "foo");
+        test.addChild("a202").setProperty("b", "foo");
+        test.addChild("a103").setProperty("a", "foo");
+        test.addChild("a203").setProperty("b", "foo");
+        test.addChild("a104").setProperty("a", "foo");
+        test.addChild("a204").setProperty("b", "foo");
+        root.commit();
+
+        String query = "select [jcr:path] from [nt:base] where [a] = 'foo'";
+        assertEventually(() -> assertQuery(query, SQL2,
+                List.of("/test/a1", "/test/a2", "/test/a100", "/test/a101", "/test/a102", "/test/a103", "/test/a104")
+        ));
     }
 
     private void createIndexOfType(String type) throws CommitFailedException {
